<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvAutor"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/autor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/rgIngressos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbIng"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/rbtn_normal" />

        <RadioButton
            android:id="@+id/rbVip"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/rbtn_vip" />
    </RadioGroup>

    <Button
        android:id="@+id/btnComprar"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="300dp"
        android:text="@string/btn_comprar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etFun"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="228dp"
        android:ems="10"
        android:hint="@string/et_funcao"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>